# Qualification-work

./: .gitignore  REVIEW.md  docker-compose.yml  prometheus.yml
backend/api-gateway/: pyproject.toml
backend/api-gateway/app/: config.py  main.py
backend/api-gateway/app/routes/: applications.py  auth.py  health.py  profiles.py  vacancies.py
backend/api-gateway/app/services/: health_service.py
backend/application-service/: .env  pyproject.toml
backend/application-service/app/: config.py  main.py
backend/application-service/app/applications/: repository.py  routes.py  schemas.py  service.py
backend/application-service/app/core/: messaging.py  security.py
backend/application-service/app/db/: database.py  models.py
backend/authservice/: .env  pyproject.toml
backend/authservice/app/: config.py  main.py
backend/authservice/app/admin/: repository.py  routes.py  schemas.py  service.py
backend/authservice/app/auth/: repository.py  routes.py  schemas.py  service.py
backend/authservice/app/core/: dependencies.py  messaging.py
backend/authservice/app/db/: init_db.py  models.py  session.py
backend/authservice/app/utils/: jwt.py  security.py
backend/notifecation-service/: .env  pyproject.toml
backend/notifecation-service/app/: config.py  email_sender.py  main.py  repository.py  telegram_sender.py
backend/notifecation-service/app/db/: models.py  session.py
backend/profile-service/: .env  alembic.ini  pyproject.toml  seed_locations.py
backend/profile-service/alembic/: env.py
backend/profile-service/alembic/versions/: 2d385c4a1c3c_init_tables.py  90f730487e27_add_new_fields_and_file_urls_to_.py  a1b2c3d4e5f6_add_industry_to_company_profile.py  cae4f01da5cf_add_resumeitem_table.py
backend/profile-service/app/: config.py  main.py  profile_repository.py  profile_service.py  profiles_auth.py  worker.py
backend/profile-service/app/core/: messaging.py
backend/profile-service/app/db/: __init__.py  models.py  session.py
backend/profile-service/app/profiles/: repository.py  routes.py  schemas.py  service.py
backend/profile-service/app/schemas/: __init__.py  profile.py
backend/profile-service/app/utils/: security.py
backend/profile-service/uploads/resumes/: f225ea97-7635-44c2-82e4-132fdf806b82.docx
backend/vacancy-service/: .env  alembic.ini  pyproject.toml
backend/vacancy-service/alembic/: env.py
backend/vacancy-service/alembic/versions/: 04fd88a93fa5_init_vacancies.py  b829f42d14f3_init_vacancy_db.py  bf050cab5b8e_update_vacancy_models.py
backend/vacancy-service/app/: config.py  main.py  vacancy_repository.py  vacancy_routes.py  vacancy_service.py  worker.py
backend/vacancy-service/app/core/: messaging.py
backend/vacancy-service/app/db/: database.py  models.py
backend/vacancy-service/app/schemas/: vacancy.py
backend/vacancy-service/app/utils/: security.py
backend/vacancy-service/app/vacancies/: repository.py  routes.py  schemas.py  service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: admin.js  applications.js  auth.js  config.js  profile.js  vacancies.js
frontend/src/components/: DynamicBackground.css  DynamicBackground.jsx  Header.jsx  Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  CandidatesPage.jsx  CompanyPage.jsx  CreateVacancyPage.jsx  EmployerApplications.jsx  HomePage.jsx  Login.jsx  MyVacanciesPage.jsx  ProfilePage.jsx  Register.jsx  VacancyPage.jsx  VerifyEmail.jsx
