[project]
name = "application-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadmun",email = "vadik.keranov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "radon (>=6.0.1,<7.0.0)"
]
