[project]
name = "notifecation-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadmun",email = "vadik.keranov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "aio-pika (>=9.6.2,<10.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "radon (>=6.0.1,<7.0.0)"
]
